# simpleMovieUi

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  Gui.cpp  Gui.h  Key.h  KeyHit.h  MPlayer.cpp  MPlayer.h  OmxPlayer.cpp  OmxPlayer.h  Player.cpp  Player.h  categorieAdd.cpp  database.cpp  database.h  deinterlacePlayerTag.cpp  nameDescriptionMatcher.cpp  readme.txt  sort.cpp  startNcurses5.cpp  ui_main.cpp
scripts/: db_find_on_mount.sh  genDatabase.sh  mount.sh  omxplayer_run  sceleton.json  skeleton.json  specify  start_ui.sh
scripts/tty/: myoverride.conf
src/: Config.cpp  Config.h  Controller.cpp  Controller.h  Gui.cpp  Key.cpp  Key.h  KeyHit.h  MPlayer.cpp  MPlayer.h  OmxPlayer.cpp  OmxPlayer.h  Player.cpp  Player.h  const.h  cut_html_oneliner.cpp  database.cpp  database.h  deinterlacePlayerTag.cpp  getKey.cpp  getKey.h  keysender.cpp  nameDescriptionMatcher.cpp  ui_main.cpp
systemd/: remote_handler.service
